[gd_scene load_steps=2 format=3 uid="uid://df8vlpa7sp0y4"]

[ext_resource type="Script" uid="uid://c6p13w5of64jn" path="res://assets/gameLoop/battle/battle.gd" id="1_i3hit"]

[node name="Battle" type="ColorRect" node_paths=PackedStringArray("pillar")]
custom_minimum_size = Vector2(0, 140)
script = ExtResource("1_i3hit")
pillar = NodePath("")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Battle"
horizontal_alignment = 1

[node name="AttackCooldown" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 150
dragging_enabled = false
dragger_visibility = 2

[node name="PlayerMargin" type="MarginContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/HSplitContainer/PlayerMargin"]
layout_mode = 2

[node name="Player" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PlayerMargin/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PlayerMargin/Panel/Player"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Player"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HSplitContainer/PlayerMargin/Panel/Player"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
show_percentage = false

[node name="EnemyMargin" type="MarginContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Enemy" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/EnemyMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/EnemyMargin/Enemy"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Enemy"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HSplitContainer/EnemyMargin/Enemy"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
show_percentage = false
